# Nebula

./: .gitignore  Cargo.toml  README.md  bench_all.sh  documentaion.md  grammar.md  performance.md  simple.md  test_medium.sp
examples/: bench_cond.sp  bench_loop.py  bench_loop.sp  bench_loop_minimal.na  bench_loop_tiny.na  bench_math.py  bench_math.sp  bench_nebula.na  bench_nebula_fib.na  bench_nebula_loop.na  collections.sp  enums.spec  fib.sp  fib.spec  fizzbuzz.sp  fizzbuzz.spec  hello.sp  hello.spec  hello_world.na  parity_test.sp  simple_nebula.na  structs.sp  structs.spec  test_const_fold.na  test_fn.na  test_for_if.sp  test_for_local.sp  test_functions.sp  test_infinite_loop.sp  test_math.sp  test_nebula.na  test_nested.sp  test_nested_debug.sp  test_recursion.sp  test_simple_if.sp  test_single_loop.sp  test_vm_if.sp
installer/: build.bat  convert_assets.ps1  installer_backend.md  setup.iss  ui_design.md
nebula-vscode/: LICENSE  language-configuration.json  nebula-lang-1.0.0.vsix  package-lock.json  package.json
nebula-vscode/src/: extension.ts
nebula-vscode/syntaxes/: nebula.tmLanguage.json
nebula-vscode/themes/: nebula-galaxy-color-theme.json
src/: ext.rs  lib.rs  main.rs
src/builtins/: io.rs  mod.rs
src/error/: diagnostic.rs  mod.rs
src/interp/: env.rs  eval.rs  mod.rs  value.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  expr.rs  mod.rs  stmt.rs  types.rs
src/typeck/: check.rs  infer.rs  mod.rs  types.rs
tests/: integration.rs
website/: .gitignore  README.md  netlify.toml  package-lock.json  package.json
(+40 files in other folders)
