[package]
name = "specterscript"
version = "1.0.0"
edition = "2021"
authors = ["SpecterScript Contributors"]
description = "A high-performance programming language with Python ergonomics"
license = "MIT"

[dependencies]
thiserror = "1.0"
unicode-segmentation = "1.10"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "specter"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
