[package]
name = "nebula"
version = "1.0.0"
edition = "2021"
authors = ["Nebula Contributors"]
description = "A high-performance programming language with Python ergonomics"
license = "MIT"

[dependencies]
thiserror = "1.0"
unicode-segmentation = "1.10"
colored = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"

[[bin]]
name = "nebula"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
